--- a/Tasks/index.html
+++ b/Tasks/index.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Postman</title>
-  </head>
-  <body>
-		<h1>Hello on this page</h1>
-    <script src="JS Core 4.4/index.js"></script>
-  </body>
+
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>JS tasks</title>
+</head>
+
+<body>
+	<style>
+		body {
+			background-color: #313131;
+			color: white;
+		}
+
+		.change-color-to-white,
+		.change-color-to-black {
+			cursor: pointer;
+		}
+	</style>
+	<h1>Hello on this page</h1>
+		<input type="text">
+		<button class="btn" >Click me</button>
+	<script src="Another tasks/js.js"></script>
+</body>
+
 </html>
